fix layout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -1,9 +1,11 @@
-
-input, textarea, select {
+input,
+textarea,
+select {
   appearance: none;
   width: 100%;
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
 
   padding: .75rem 1rem;
 
@@ -23,10 +25,10 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: .1px;
 }
-                        
+
 input[type="date"] {
   position: relative;
 
@@ -37,8 +39,7 @@ input[type="date"] {
   &::before {
     content: "";
     position: absolute;
-    background: url(../../assets/icons/calendar-03.svg)
-    center/contain;
+    background: url(../../assets/icons/calendar-03.svg) center/contain;
     right: 1rem;
     width: 1.25rem;
     height: 1.25rem;
@@ -49,8 +50,7 @@ input[type="date"] {
 }
 
 select {
-  background: url(../../assets/icons/arrow-down-01.svg)
-  no-repeat calc(100% - 1rem);
+  background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
 }
 
 .address .flex {
@@ -74,7 +74,7 @@ input {
     border: 0.125rem solid var(--semantic-error);
   }
 
-  & + small {
+  &+small {
     font: var(--text);
     color: #78716C;
 
@@ -82,7 +82,7 @@ input {
     margin-top: .25rem;
   }
 
-  &[required] + .error {
+  &[required]+.error {
     display: flex;
     align-items: center;
     gap: .25rem;
@@ -93,7 +93,7 @@ input {
     margin-top: .25rem;
   }
 
-  &:not(:focus):valid + .error {
+  &:not(:focus):valid+.error {
     display: none;
   }
 }
